--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Adyen Support
-    url: https://support.adyen.com/hc/en-us/requests/new?ticket_form_id=360000705420
+    url: https://www.adyen.help/hc/en-us/requests/new
     about: For other questions, contact our support team
