--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Adyen Support
-    url: https://www.adyen.help/hc/en-us/requests/new
+    url: https://ca-live.adyen.com/ca/ca/contactUs/support.shtml
     about: For other questions, contact our support team
